# sitmontui

./: .env.example  AGENT_CONTEXT.md  Cargo.toml  MTS_API.md  README.md  release.sh
.github/workflows/: release.yml
benches/: render_perf.rs
data/: process_ne_data.py
homebrew/Formula/: sitmon.rb
src/: app.rs  coastline_data.rs  data.rs  lib.rs  main.rs  market_ticker.rs  model.rs  mts_client.rs  ui.rs
tests/: e2e.rs
tests/fixtures/: aircraft.json  events.json
