[package]
name = "sitmon_cli"
version = "0.2.2"
edition = "2024"
default-run = "sitmon_cli"

[dependencies]
anyhow = "1.0"
crossterm = "0.29"
dotenvy = "0.15"
geojson = "0.24"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
expectrl = "0.8"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "render_perf"
harness = false
